Fix gift box message by dedicated js file for bags app and amend to block extra_js aboce script tag in bag.html

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -105,8 +105,8 @@
     </div>
 </div>
 {% endblock %}
-{% block postloadjs %}
-<script src="{% static 'bag/js/bag.js' %}"></script>
+{% block extra_js %}
+    <script src="{% static 'bag/js/bag.js' %}"></script>
 {% endblock %}
 
 
