--- a/bag/static/bag/css/bag.css
+++ b/bag/static/bag/css/bag.css
@@ -3,6 +3,9 @@
     margin-top: 2rem;
 }
 
+main {
+    margin-bottom: 20px;
+}
 
 .table th {
     background-color: #343a40; 
@@ -25,6 +28,7 @@
 /* Buttons */
 .btn {
     font-weight: 500; 
+    margin-bottom: 20px;
 }
 
 .btn-primary {
