--- a/templates/base.html
+++ b/templates/base.html
@@ -1,43 +1,87 @@
 {% load static %}
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
-    <link rel="stylesheet" href="{% static 'css/products.css' %}">
-    <link rel="icon" href="{% static 'images/favicon/favicon.ico' %}" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'images/favicon/apple-touch-icon.png' %}">
-    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'images/favicon/favicon-32x32.png' %}">
-    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'images/favicon/favicon-16x16.png' %}">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
+    <link rel="stylesheet" href="{% static 'css/products.css' %}" />
+    <link
+      rel="icon"
+      href="{% static 'images/favicon/favicon.ico' %}"
+      type="image/x-icon"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="{% static 'images/favicon/apple-touch-icon.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="{% static 'images/favicon/favicon-32x32.png' %}"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="{% static 'images/favicon/favicon-16x16.png' %}"
+    />
     <title>GAA Store - {% block extra_title %}{% endblock %}</title>
     {% block extra_css %}{% endblock %}
   </head>
-  <body>
-    {% include 'includes/mobile-top-header.html' %}
-    {% include 'includes/main-nav.html' %}
+  <body class="d-flex flex-column min-vh-100">
+    {% include 'includes/mobile-top-header.html' %} {% include 'includes/main-nav.html' %}
 
-    <main>
-      {% block content %}{% endblock %}
-    </main>
+    <main>{% block content %}{% endblock %}</main>
 
-    <footer class="bg-dark text-white py-4">
-      <div class="container text-center">
-        <form action="https://mailchimp.com" method="POST" class="mb-3">
-          <label for="email" class="form-label">Sign up for updates:</label>
-          <input type="email" id="email" name="email" class="form-control mb-2" placeholder="Enter your email" required>
-          <button type="submit" class="btn btn-primary">Subscribe</button>
-        </form>
-        <div class="d-flex justify-content-center">
-          <a href="https://facebook.com" class="text-white mx-2">Facebook</a>
-          <a href="/privacy-policy/" class="text-white mx-2">Privacy Policy</a>
-          <a href="/contact-us/" class="text-white mx-2">Contact Us</a>
+    <footer class="bg-dark text-white py-3">
+      <div class="row align-items-center">
+        <div class="col-md-6 mb-3 mb-md-0">
+          <div class="row no-gutters">
+            <div class="col-12 col-md-8 mb-2 mb-md-0">
+              <form action="https://mailchimp.com" method="POST" class="d-flex">
+                <label for="email" class="sr-only">Sign up for updates:</label>
+                <input
+                  type="email"
+                  id="email"
+                  name="email"
+                  class="form-control mr-2"
+                  placeholder="Enter your email"
+                  required
+                />
+                <button type="submit" class="btn btn-primary">
+                  Subscribe
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>    
+          <!-- Links -->
+          <div class="col-md-6 text-md-right">
+            <div class="d-flex justify-content-center justify-content-md-end">
+              <a href="https://facebook.com" class="text-white mx-2">Facebook</a>
+              <a href="/privacy-policy/" class="text-white mx-2">Privacy Policy</a>
+              <a href="/contact-us/" class="text-white mx-2">Contact Us</a>
+            </div>
+          </div>
         </div>
       </div>
     </footer>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
