code out links on hurley home page

--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -6,12 +6,12 @@
     <h1 class="text-center">Hurleys Shop</h1>
 
     <!-- Filter Links -->
-    <div class="text-center mb-4">
+    <!-- <div class="text-center mb-4">
         <a href="{% url 'hurleys_shop' %}?type=ash" class="btn btn-outline-primary">Ash Hurleys</a>
         <a href="{% url 'hurleys_shop' %}?type=bambu" class="btn btn-outline-primary">Bambú Hurleys</a>
         <a href="{% url 'hurleys_shop' %}?type=goalie" class="btn btn-outline-primary">Goalie Hurleys</a>
         <a href="{% url 'hurleys_shop' %}" class="btn btn-outline-secondary">Show All</a>
-    </div>
+    </div> -->
 
     <!-- Display Hurleys  -->
     <div class="row text-center mt-4">
