--- a/static/css/base.css
+++ b/static/css/base.css
@@ -159,6 +159,7 @@ body {
     top: 20px !important;
     right: 20px !important; 
     left: auto !important;
+    bottom:auto !important;
     z-index: 1060 !important;
     width: auto !important;
     max-width: 400px !important;
