--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -13,7 +13,7 @@
           <li class="nav-item"><a class="nav-link" href="/accounts/login/">Log In</a></li>
           <li class="nav-item">
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_bag' %}">
-                Bag
+                Bag (<span id="bag-count">{{ bag_count }}</span>)
             </a>
         </li>
         </ul>
