--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -40,15 +40,37 @@
             </ul>
         </div>
 
+         <!-- Payment Form -->
+         <div class="col-md-6">
+            <h4>Payment Details</h4>
+            <form id="payment-form" method="POST" action="{% url 'checkout' %}">
+                {% csrf_token %}
+                <div id="card-element" class="form-control mb-3">
+                    <!-- Stripe card element will be inserted here -->
+                </div>
+                <div id="card-errors" role="alert" class="text-danger mb-3"></div>
+                <button type="submit" class="btn btn-success btn-lg btn-block">Pay Now</button>
+            </form>
+        </div>
+    </div>
+</div>
+
         <!-- Billing/Shipping Form -->
         <div class="col-md-6">
             <h4>Billing & Shipping Details</h4>
             <form id="checkout-form" method="POST" action="{% url 'checkout' %}" class="mb-5">
                 {% csrf_token %}
                 {% crispy form %}
-                <button type="submit" class="btn btn-success btn-lg btn-block mt-4">Place Order</button>
             </form>
         </div>
     </div>
 </div>
+
+{% endblock %}
+
+{% block postloadjs %}
+    {{ block.super }}
+    {{ stripe_public_key|json_script:"id_stripe_public_key" }}
+    {{ client_secret|json_script:"id_client_secret" }}
+    <script src="{% static 'checkout/js/stripe_elements.js' %}"></script>
 {% endblock %}
