--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -40,32 +40,47 @@
             </ul>
         </div>
 
-         <!-- Payment Form -->
-         <div class="col-md-6">
-            <h4>Payment Details</h4>
-            <form id="payment-form" method="POST" action="{% url 'checkout' %}">
+        <!-- Combined Billing/Shipping and Payment Form -->
+        <div class="col-md-6">
+            <h4>Billing, Shipping, and Payment Details</h4>
+            <form id="checkout-form" method="POST" action="{% url 'checkout' %}">
                 {% csrf_token %}
+
+                <!-- Billing/Shipping Details -->
+                <div class="form-group">
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="address">Address</label>
+                    <input type="text" id="address" name="address" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="city">City</label>
+                    <input type="text" id="city" name="city" class="form-control" required>
+                </div>
+                <div class="form-group">
+                    <label for="postal_code">Postal Code</label>
+                    <input type="text" id="postal_code" name="postal_code" class="form-control" required>
+                </div>
+
+                <!-- Stripe Payment Details -->
+                <h4 class="mt-4">Payment Details</h4>
                 <div id="card-element" class="form-control mb-3">
                     <!-- Stripe card element will be inserted here -->
                 </div>
                 <div id="card-errors" role="alert" class="text-danger mb-3"></div>
+
+                <!-- Submit Button -->
                 <button type="submit" class="btn btn-success btn-lg btn-block">Pay Now</button>
             </form>
         </div>
     </div>
 </div>
-
-        <!-- Billing/Shipping Form -->
-        <div class="col-md-6">
-            <h4>Billing & Shipping Details</h4>
-            <form id="checkout-form" method="POST" action="{% url 'checkout' %}" class="mb-5">
-                {% csrf_token %}
-                {% crispy form %}
-            </form>
-        </div>
-    </div>
-</div>
-
 {% endblock %}
 
 {% block postloadjs %}
